sumo/tests/dfrouter/errors/detector_flow_files/false_detectors_flows_file3_deprecated/errors.dfrouter
Warning: Please remark that using ';' as a file divider is deprecated since version 0.9.7
 In near future, only ',' will be accepted as file divider.
Error: The detector-flow-file 'xxx.txt' can not be opened.
Quitting (on error).
